# Sere

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CmakeLists.txt  LICENSE  Makefile  README.md  authorized_keys  authorized_keys.pub  cmake_install.cmake  compile_commands.json  errors.hpp  main  main.cpp  output.ll  pyproject.toml  sere  test  test.s  test.sere  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: main.cpp.5424EE620E31FCCD.idx
.cmake/api/v1/reply/: cache-v2-e78915a510e36b82eb40.json  cmakeFiles-v1-fd24a17e51a0ba7754e7.json  codemodel-v2-6178e18b2b525c04c380.json  index-2025-06-09T18-20-59-0419.json  target-RISCVTargetParserTableGen-a84c0c8fc07bcfa6cbb8.json  target-intrinsics_gen-287d70c83aab30bd2c15.json  target-sere-29f22686efde8119d82f.json
.devcontainer/: Dockerfile  devcontainer.json
Parser/Parser/: Parser.hpp  sere.gram
Parser/Parser/AST/: AST.hpp  Expr.hpp  Nodes.hpp  Stat.hpp  Visitor.hpp
Parser/Parser/AST/Midlevel/: SymbolTable.hpp
Parser/Scanner/: Scanner.hpp  Token.hpp  TokenType.hpp
Sere/IR/: CodeGenContext.hpp  IR.hpp
Sere/Parser/: Builtins.hpp  Parser.hpp  sere.gram
Sere/Parser/AST/: AST.hpp  Expr.hpp  Stat.hpp  Visitor.hpp
Sere/Parser/AST/Midlevel/: Environments.hpp  SymbolTable.hpp
Sere/Scanner/: Scanner.hpp  Token.hpp  TokenType.hpp
Sere/Std/: Registry.hpp  Standard.hpp
cmake/: LLVMConfig.cmake
include/lexer/core/: lexer.hpp  token.hpp  token_type.hpp
scripts/: build_fe.sh  install.sh
sere/: main.py
sere/be/: builtins.py  pipeline.py
sere/fe/.antlr/: SereLexer.java  SereParser.java
sere/fe/gram/: SereLexer.g4  SereLexer.py  SereLexerBase.py  SereParser.g4  SereParser.py  SereParserBase.py  SereParserListener.py  SereParserVisitor.py  compile.py
sere/fe/gram/.antlr/: SereLexer.java  SereParser.java  SereParserBaseListener.java  SereParserListener.java
sere/me/: Error.py  SereListener.py  SereVisitor.py  Symbols.py
src/: main.cpp
src/lexer/: lexer.cpp  token.cpp
typings/llvmlite/: __init__.pyi  _version.pyi  utils.pyi
typings/llvmlite/binding/: __init__.pyi  analysis.pyi  context.pyi  dylib.pyi  executionengine.pyi  ffi.pyi  initfini.pyi  linker.pyi  module.pyi  newpassmanagers.pyi  object_file.pyi  options.pyi  orcjit.pyi  passmanagers.pyi  targets.pyi  transforms.pyi  typeref.pyi  value.pyi
typings/llvmlite/ir/: __init__.pyi  _utils.pyi  builder.pyi  context.pyi  instructions.pyi  module.pyi  transforms.pyi  types.pyi  values.pyi
typings/llvmlite/tests/: __init__.pyi  customize.pyi
